--- a/Basic JavaScript Projects/Project1_expressions_alert/index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset-"utf-8">
         <title>Project1 expressions alert</title>
+        <script src="event.js"></script>
     </head>
     <body>
-        <script src="JS/main.js"></script>
+        <button onclick="displayTime()">The time is?</button>
+    <!---  <script src="JS/main.js"></script>  -->
     </body>
 </html>
